--- a/css/main.css
+++ b/css/main.css
@@ -182,11 +182,11 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background: #005bea;
-  background: -webkit-linear-gradient(bottom, #005bea, #00c6fb);
-  background: -o-linear-gradient(bottom, #005bea, #00c6fb);
-  background: -moz-linear-gradient(bottom, #005bea, #00c6fb);
-  background: linear-gradient(bottom, #005bea, #00c6fb);
+  background: #3ea175;
+  background: -webkit-linear-gradient(bottom, #1f553d, #3ea175);
+  background: -o-linear-gradient(bottom, #1f553d, #3ea175);
+  background: -moz-linear-gradient(bottom, #1f553d, #3ea175);
+  background: linear-gradient(bottom, #1f553d, #3ea175);
   opacity: 0.9;
 }
 
@@ -253,6 +253,14 @@ iframe {
   height: 50px;
   border-radius: 25px;
   padding: 0 30px 0 53px;
+}
+
+.input200 {
+  font-family: Montserrat-Bold;
+  font-size: 15px;
+  line-height: 1.2;
+  color: #fff;
+
 }
 
 
@@ -332,7 +340,6 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 30px;
 
 }
 
@@ -375,11 +382,11 @@ iframe {
   border-radius: 25px;
   top: 0;
   left: 0;
-  background: #005bea;
-  background: -webkit-linear-gradient(left, #005bea, #00c6fb);
-  background: -o-linear-gradient(left, #005bea, #00c6fb);
-  background: -moz-linear-gradient(left, #005bea, #00c6fb);
-  background: linear-gradient(left, #005bea, #00c6fb);
+  background: rgba(62, 161, 117, 0.3);
+  background: -webkit-linear-gradient(left, rgba(62, 161, 117, 0.3), #3ea175);
+  background: -o-linear-gradient(left, rgba(62, 161, 117, 0.3), #3ea175);
+  background: -moz-linear-gradient(left, rgba(62, 161, 117, 0.3), #3ea175);
+  background: linear-gradient(left, rgba(62, 161, 117, 0.3), #3ea175);
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
