--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,13 @@ body {
 
 .text-primary-f{
     color: #a5aaad;
-    font-size: 40px;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.text-primary-g{
+    color: #a5aaad;
+    font-size: 14px;
     font-weight: 700;
 }
 
@@ -60,8 +66,20 @@ body {
         "sidebar main main main";
 }
 
+.tiny_container{
+    height: 50vh;
+    background-color: #24394e;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 1px;
+}
 
-
+#CreateFeedback{
+    margin-top: 180px;
+    text-align: center;
+    color: #3b9669;
+    font-weight: 700;
+}
 
 * {
     box-sizing: border-box;
@@ -181,6 +199,26 @@ input[type=text] {
     float: right;
   }
 
+  .button1{
+    width: 20%;
+    align-items: center;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin-top: 20px;
+    margin-left: 400px;
+    
+
+    cursor: pointer;
+  }
+
+  #createIcon{
+      margin-right: 10px;
+  }
+
   button:hover{
     background-color: #45a049;
   }
@@ -275,6 +313,8 @@ input[type=text] {
     background: #ffffff;
     box-shadow: 2px 2px 5px #d9d9d9, -2px -2px 5px #ffffff;
 }
+
+
 
 main {
     background: #f3f4f6;
